<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">DeePlayer</string>
    <string name="hello_world">Hello world!</string>

    <string name="title_activity_main">Main</string>
    <string name="title_activity_mix">Mixes</string>
    <string name="title_activity_recommendations">Recommendations</string>
    <string name="title_activity_new_releases">New Releases</string>
    <string name="title_activity_user_library">User Library</string>
    <string name="title_activity_chart">Charts</string>

    <string name="error_server_connection_lost">Problem connecting to the server</string>
    <string name="error_application">Application error! Contact administrator and describe the problem</string>
    <string name="error_server">Server error! Contact administrator and describe the problem</string>
    <string name="error_authentification_dialog_message_text">Incorrect Username/Password Combination</string>

    <string name="default_duration" translatable="false">0:00</string>
    <string name="empty" translatable="false"></string>
    <string name="login_with_deezer">Login with Deezer</string>
    <string name="artist_name_text">by <xliff:g id="artist_name">%1$s</xliff:g></string>


    <string name="action_settings">Settings</string>
    <string name="action_end">Quit</string>
    <string name="menu_main_now_playing">Now playing</string>
    <string name="notification_button_play_description">Play</string>
    <string name="notification_button_next_description">Next</string>
    <string name="notification_toggle_like_status_description">Toggle like status for the track</string>
    <string name="notification_button_previous_description">Previous</string>
    <string name="notification_item_image_description">Associated image</string>
    <string name="flow_header_text">Want to hear something new? Flow can help.</string>
    <string name="start_flow_text">START FLOW</string>


    <string name="title_section1">Tracks</string>
    <string name="title_section2">Albums</string>
    <string name="title_section3">Artists</string>
    <string name="title_section4">Mixes</string>
    <string name="menu_category_navigation">Navigation</string>

    <string name="open_drawer">Open the Navigation Menu</string>
    <string name="close_drawer">Close the Navigation Menu</string>
</resources>
